# orchestron

./: .dockerignore  .gitignore  ADD_OPCODES.md  AGENTS.md  ARCHITECTURE.md  BACKEND.md  CLOCK_OWNERS.md  CSOUND_OPCODES.md  DECISIONS.md  Dockerfile  EFFECT_INSTRUMENTS.md  GRAPH_EDITOR.md  INSTALL.docker.md  INSTALL.linux.md  INSTALL.macos.md  INSTALL.md  INSTALL.windows.md  MIDI_SEQUENCER.md  Makefile  QUICKSTART.md  README.md  WEBRTC_STREAMING.md  docker-compose.alsa.yaml  docker-compose.yaml  pyproject.toml
backend/: __init__.py
documentation/: user_documentation.md
examples/: Demo_Performance.orch.json  Drummer_Demo.orch.json  README.md  orchestron-sequencer-demo1.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.ts  vite.config.ts
host-midi-helper/: Cargo.toml  README.md
host-midi-helper/src/: config.rs  main.rs  platform.rs  protocol.rs
integrations/: README.md  cli_performance_creation_plan.md  electronic-music-fundamentals.md
integrations/skills/orchestron-patch-creator/: SKILL.md  pyproject.toml
integrations/skills/orchestron-patch-creator/agents/: openai.yaml
integrations/skills/orchestron-patch-creator/references/: examples.md  graph_rules.md  opcodes_core.md  opcodes_effects.md  opcodes_synthesis.md  patch_spec.md  template_families.md  workflow.md
integrations/skills/orchestron-patch-creator/scripts/: orchestron_patch_cli.py
integrations/skills/orchestron-patch-creator/src/orchestron_patch/: __init__.py
integrations/skills/orchestron-patch-creator/src/orchestron_patch/cli/: __init__.py  __main__.py  orchestron_patch_cli.py
integrations/skills/orchestron-patch-creator/tests/: test_patch_cli.py
integrations/skills/orchestron-performance-creator/: SKILL.md  pyproject.toml
integrations/skills/orchestron-performance-creator/references/: chord_syntax.md  composition_workflow.md  genre_blueprints.md  harmony_arpeggiation.md  rhythm_layering.md  score_spec.md
integrations/skills/orchestron-performance-creator/scripts/: orchestron_cli.py
integrations/skills/orchestron-performance-creator/src/orchestron/: __init__.py
integrations/skills/orchestron-performance-creator/src/orchestron/cli/: __init__.py  __main__.py  orchestron_cli.py
integrations/skills/orchestron-performance-creator/tests/: test_cli_output.py
tmp_gen01_debug/: db.sqlite
tools/: README.md  build_user_docs_pdf.mjs  code_stats.sh  (+4 more)
(+165 files in other folders)
