[project]
name = "visualcsound-backend"
version = "0.1.0"
description = "Backend services for VisualCSound"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "sqlalchemy>=2.0.43",
  "mido>=1.3.3",
  "python-rtmidi>=1.5.8",
  "ctcsound>=6.17.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "httpx>=0.28.1",
  "requests>=2.32.0",
  "beautifulsoup4>=4.14.0",
  "lxml>=6.0.0"
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = true
