[project]
name = "orchestron-performance-creator"
version = "0.1.0"
description = "CLI utilities for agentic Orchestron performance creation."
requires-python = ">=3.13,<3.14"
dependencies = [
  "PyYAML>=6.0.3",
]

[project.scripts]
orchestron_cli = "orchestron.cli.orchestron_cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestron"]

